// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Snaphot must match primary 1`] = `
<button
  className="button buttonPrimary"
>
  <span>
    awesome button
  </span>
</button>
`;

exports[`<Button /> Snaphot must match secondary 1`] = `
<button
  className="button buttonSecondary"
>
  <span>
    awesome button
  </span>
</button>
`;

exports[`<Button /> Snaphot must match tertiary 1`] = `
<button
  className="button buttonTertiary"
>
  <span>
    awesome button
  </span>
</button>
`;
